--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-csso": "^4.0.1",
     "gulp-less": "4.0.x",
     "gulp-plumber": "^1.2.x",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "2.6.x",
     "gulp-uglify": "^3.0.2",
