--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "node": "8.16"
   },
   "dependencies": {
-    "jquery": "^3.6.0",
-    "normalize.css": "^8.0.1"
+    "normalize.less": "^1.0.0"
   }
 }
