--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@htmlacademy/editorconfig-cli": "1.x",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
+    "eslint": "^7.21.0",
+    "eslint-config-htmlacademy": "^2.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.x",
@@ -22,8 +24,9 @@
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
+    "eslint": "eslint source/js/**/*.js",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
-    "test": "npm run editorconfig && npm run stylelint",
+    "test": "npm run editorconfig && npm run stylelint && npm run eslint",
     "build": "gulp build",
     "start": "gulp start"
   },
