--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "eslint-config-htmlacademy": "^2.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-concat": "^2.6.x",
     "gulp-csso": "^4.0.1",
     "gulp-less": "4.0.x",
     "gulp-plumber": "^1.2.x",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "2.6.x",
-    "gulp-uglify": "^3.0.2",
+    "gulp-webpack": "^1.5.0",
     "stylelint": "^10.1.0",
-    "stylelint-config-htmlacademy": "^0.1.4"
+    "stylelint-config-htmlacademy": "^0.1.4",
+    "webpack": "^3.3.0"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
