--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-htmlacademy": "^2.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
