--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "del": "^6.0.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-htmlacademy": "^2.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-csso": "^4.0.1",
@@ -21,7 +20,7 @@
     "gulp-webpack": "^1.5.0",
     "stylelint": "^10.1.0",
     "stylelint-config-htmlacademy": "^0.1.4",
-    "webpack": "^3.3.0"
+    "webpack": "3.3.x"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
