--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "2.6.x",
     "gulp-webpack": "^1.5.0",
+    "husky": "4.3.8",
     "stylelint": "^10.1.0",
     "stylelint-config-htmlacademy": "^0.1.4",
     "terser-webpack-plugin": "4.2.3",
@@ -49,5 +50,10 @@
   },
   "dependencies": {
     "normalize.less": "^1.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run editorconfig && npm run stylelint && npm run eslint"
+    }
   }
 }
