--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint && npm run eslint",
     "build": "gulp build",
-    "start": "gulp build && gulp start"
+    "start": "gulp start"
   },
   "browserslist": [
     "last 2 versions",
